style de cart and check out page

--- a/css/main.css
+++ b/css/main.css
@@ -11132,4 +11132,8 @@ i {
 .site-footer .menu a:hover {
   text-decoration: underline;
 }
+
+.checkout-button-bonprix {
+  background-color: #e66c7d;
+}
 /*# sourceMappingURL=main.css.map */
